--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
   <div>
     <canvas id="myChart"></canvas>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-doughnutlabel-rebourne@3.0.0-beta.4/dist/chartjs-plugin-doughnutlabel-rebourne.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
   <script src="main.js"></script>
 </body>
 </html>
